# Packet-Whiz

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: workflow.yml
analyzers/: creds.py  files.py  indicators.py
packetwhiz/analyzers/: protocol.py
packetwhiz/parser/: pcap_parser.py
packetwhiz/utils/: flag_finder.py  report.py
parser/: log_parcer.py
utils/: report.py
